k8s-deploy/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sp-catalog-dev
    app.kubernetes.io/instance: sp-catalog-dev-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: sp-catalog-dev-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sp-catalog-dev
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sp-catalog-dev
    spec:
      containers:
        - image: 746460560240.dkr.ecr.ap-south-1.amazonaws.com/seller-portal-dev:catalog-service-dev-latest
          imagePullPolicy: Always
          name: sp-catalog-dev
          ports:
            - containerPort: 8081
