k8s-deploy/dev/documentdb-external-service.yml
apiVersion: v1
kind: Service
metadata:
   name: sp-catalog-dev
spec: 
   type: ExternalName
   externalName: sp-devbackend.caub6fvh4hyp.ap-south-1.docdb.amazonaws.com
