k8s-deploy/dev/postgresdb-external-service.yml
apiVersion: v1
kind: Service
metadata:
   name: sp-catalog-dev
spec: 
   type: ExternalName
   externalName: sp-devbackend-postgres.caub6fvh4hyp.ap-south-1.rds.amazonaws.com
