k8s-deploy/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sp-catalog-dev
    app.kubernetes.io/instance: sp-catalog-dev-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: sp-catalog-dev
spec:
  selector:
    app: sp-catalog-dev
  type: NodePort
  ports:
   -  protocol: TCP
      port: 8081
      targetPort: 8081
